--- a/views/designPatterns/designPatterns.html
+++ b/views/designPatterns/designPatterns.html
@@ -118,3 +118,6 @@
 <div w3-include-html="views/designPatterns/behavioral/behavioral.html"></div>
 
 
+<!-- Summary -->
+<div w3-include-html="views/designPatterns/summary.html"></div>
+
