--- a/views/designPatterns/behavioral/strategy.html
+++ b/views/designPatterns/behavioral/strategy.html
@@ -2,10 +2,159 @@
     <!-- Strategy design pattern -->
 
     <def2>Strategy</def2>
-    <p><strong>*</strong></p>
+    <p><strong>We define an algotithm at a high level</strong></p>
+    <p><strong>Then define the interface you expect each strategy to follow/strong></p>
+    <p><strong>Provide for dynamic composition of strategies in the resulting object</p>
+    <br>
+    <p><strong>Enables the exact behavior of a system to be selected at run-time</strong></p>
+    <br>
+    <p><strong>Many algorithms can be decompose into higher-and lowerlevel parts</strong></p>
+    <p><strong>Making tea can be decomposed into:</strong></p>
+    <p> - <strong>High level → </strong>The process of making a hot beverage (boil water, pour into cup)</p>
+    <p> - <strong>Lower level → </strong>Tea-specific things (put teabag into awter)</p>
+    <br>
+    <p><strong>The high level algorithm can then be reused for making coffe or hot chocolate:</strong></p>
+    <p> - Supported by beverage-specific strategies</p>
+
+
+    <p>Example: we want a list generator for html and markdown</p>
+
+    <p>For this, we will  have a base strategy abstract class: ListStrategy</p>
+    <p>Then we will have a class that extends the ListStrategy for each format: </p>
+
+    
+    <div class="poblem-solution__container">
+        <pre>
+            class ListStrategy
+            {
+            start(buffer) {}                // start and end dont apply in the markdown strategy so they are ignored
+            end(buffer) {}
+            addListItem(buffer, item) {}    // this method is used in the html and markdown strategies
+            }
+            
+            class MarkdownListStrategy extends ListStrategy
+            {
+            addListItem(buffer, item) {
+                buffer.push(` * ${item}`);
+            }
+            }
+            
+            class HtmlListStrategy extends ListStrategy
+            {
+            start(buffer) {
+                buffer.push('&ltul&gt');
+            }
+    
+        </pre>
+    </div>
+
+
+    <p>Bc the textProcessor is Dynamic, we can change the used strategy to generate different types of lists on the go:</p>
 
     <div class="poblem-solution__container">
         <pre>
+
+            let tp = new TextProcessor();
+            tp.setOutputFormat(OutputFormat.markdown);
+            tp.appendList(['foo', 'bar', 'baz']);
+            console.log(tp.toString());
+            
+            tp.clear();
+            tp.setOutputFormat(OutputFormat.html);
+            tp.appendList(['alpha', 'beta', 'gamma']);
+            console.log(tp.toString());
+
+        </pre>
+    </div>
+    <br>
+
+    <p><strong>Complete code ↓↓↓</strong></p>
+    <div class="poblem-solution__container">
+        <pre>
+    let OutputFormat = Object.freeze({      /// types of formats
+        markdown: 0,
+        html: 1
+        });
+        
+        class ListStrategy
+        {
+        start(buffer) {}
+        end(buffer) {}
+        addListItem(buffer, item) {}
+        }
+        
+        class MarkdownListStrategy extends ListStrategy
+        {
+        addListItem(buffer, item) {
+            buffer.push(` * ${item}`);
+        }
+        }
+        
+        class HtmlListStrategy extends ListStrategy
+        {
+        start(buffer) {
+            buffer.push('&ltul&gt');
+        }
+        
+        end(buffer)
+        {
+            buffer.push('&lt/ul&gt');
+        }
+        
+        addListItem(buffer, item) {
+            buffer.push(`  &ltli&gt${item}&lt/li&gt`)
+        }
+        }
+        
+        class TextProcessor
+        {
+        constructor(outputFormat)
+        {
+            this.buffer = [];
+            this.setOutputFormat(outputFormat);
+        }
+        
+        setOutputFormat(format)
+        {
+            switch (format)
+            {
+            case OutputFormat.markdown:
+                this.listStrategy = new MarkdownListStrategy();
+                break;
+            case OutputFormat.html:
+                this.listStrategy = new HtmlListStrategy();
+                break;
+            }
+        }
+        
+        appendList(items)
+        {
+            this.listStrategy.start(this.buffer);
+            for (let item of items)
+            this.listStrategy.addListItem(this.buffer, item);
+            this.listStrategy.end(this.buffer);
+        }
+        
+        clear()
+        {
+            this.buffer = [];
+        }
+        
+        toString()
+        {
+            return this.buffer.join('\n');
+        }
+        }
+        
+        let tp = new TextProcessor();
+        tp.setOutputFormat(OutputFormat.markdown);
+        tp.appendList(['foo', 'bar', 'baz']);
+        console.log(tp.toString());
+        
+        tp.clear();
+        tp.setOutputFormat(OutputFormat.html);
+        tp.appendList(['alpha', 'beta', 'gamma']);
+        console.log(tp.toString());
         </pre>
     </div>
 </div>
