--- a/views/designPatterns/behavioral/visitor.html
+++ b/views/designPatterns/behavioral/visitor.html
@@ -2,10 +2,269 @@
     <!-- Visitor design pattern -->
 
     <def2>Visitor</def2>
-    <p><strong>*</strong></p>
+    <p><strong>Is a component (visitor) that knows how to traverse a data structure composed of (possibly related) types.</strong></p>
+    <br>
 
+    <p><strong>Used when we need to define a new operation on an entire class hierarchy</strong></p>
+    <p> - Ex. Make a document model printable to html/markdown</p>
+
+    <p><strong>We do not want to keep modifying every class in the hierarchy</strong></p>
+    <p><strong>We need access to the non common aspects of classes in the hierarchy</strong></p>
+
+    <p><strong>We create an external component to handle rendering wich knows how to navegate between all this structures</strong></p>
+    <p> - But avoid explici type checks (we migh do this implicitly)</p>
+
+
+
+    <!-- INTRUSIVE VISITOR -->
+    <def3>Intrusive visitor</def3>
+    <p>We have a NumberExpression that can print the value</p>
+    <p>We have a AdditionExpression that can print the left + right value string betwen ( )</p>
+    <p>This is an example of an intrusive visitor bc the print method (visitor) is inside the NumberExporession and insde the AdditionExpression</p>
+
+    <p><strong>Complete code ↓↓↓</strong></p>
     <div class="poblem-solution__container">
         <pre>
+    class NumberExpression
+    {
+        constructor(value)
+        {
+            this.value = value;
+        }
+
+        print(buffer)
+        {
+            buffer.push(this.value.toString());
+        }
+    }
+
+    class AdditionExpression
+    {
+        constructor(left, right)
+        { 
+            this.left = left;               //→ will be  a new NumberExpression  that can also print
+            this.right = right;             //→ will be  a new NumberExpression  that can also print
+        }
+
+        print(buffer)
+        {
+            buffer.push('(');
+            this.left.print(buffer);
+            buffer.push('+');
+            this.right.print(buffer);
+            buffer.push(')');
+        }
+    }
+
+    // 1 + (2+3)
+    let e = new AdditionExpression(
+    new NumberExpression(1),
+    new AdditionExpression(
+        new NumberExpression(2),
+        new NumberExpression(3)
+    )
+    );
+    let buffer = [];
+    e.print(buffer);
+    console.log(buffer.join(''));           //→ (1+(2+3))
+        </pre>
+    </div>
+
+
+    <!-- Reflective VISITOR -->
+    <def3>Reflective visitor</def3>
+    <p>In this approach, we will remove the print method from the NumberExporession and the AdditionExpression</p>
+    <p>We will redo this functionality inside the ExpressionPrinter class (separation of conserns)</p>
+    <p>In this approach we get the same result as in the intrusive Visitor, but here we have the printing as a separate non intrusive visitor </p>
+    <p><strong>Its called Reflective visitor bc</strong> figuring out the type of expression is called 'reflection', and we have to check te type of instance
+    inside the ExpressionPrinter in order to know what to do</p>
+    <br>
+    <p><strong>The only problem with this implementation is the if else structure to figure out the type of instance inside the ExpressionPrinter reflective visitor</strong></p>
+    <p><strong>Complete code ↓↓↓</strong></p>
+    <div class="poblem-solution__container">
+        <pre>
+    class NumberExpression
+    {
+        constructor(value)
+        {
+        this.value = value;
+        }
+    }
+    
+    class AdditionExpression
+    {
+        constructor(left, right)
+        {
+        this.left = left;
+        this.right = right;
+        }
+    }
+    
+    class ExpressionPrinter
+    {
+        print(e, buffer)
+        {
+        if (e instanceof NumberExpression)          //→ figuring out the type of expression is called 'reflection' → NumberExporession case
+        {
+            buffer.push(e.value);
+        }
+        else if (e instanceof AdditionExpression)   //→ AdditionExpression case
+        {
+            buffer.push('(');
+            this.print(e.left, buffer);
+            buffer.push('+');
+            this.print(e.right, buffer);
+            buffer.push(')');
+        }
+        }
+    }
+    
+    let e = new AdditionExpression(
+        new NumberExpression(1),
+        new AdditionExpression(
+        new NumberExpression(2),
+        new NumberExpression(3)
+        )
+    );
+    let buffer = [];
+    let ep = new ExpressionPrinter();
+    ep.print(e, buffer);
+    console.log(buffer.join(''));          //→ (1+(2+3))
+         </pre>
+     </div>
+
+
+
+       <!-- Classic VISITOR -->
+    <def3>Classic visitor</def3>
+
+    <p>Propagate an accept(visitor v) method throughou the entire hierarchy</p>
+    <p>Create a visitor wit visitFoo(Foo), visitBar(Bar), for each element in the hierarchy</p>
+    <p>Each accept() simply calls visitor.visitXxx(this)</p>
+
+    <br>
+
+    <p>In this approach the main class is the visitor wich only contains a buffer</p>
+    <p>Then, the class ExpressionPrinter extends Visitor, instead of checking the instance of and having an if else
+        structure for each expression, we have a different method for each expression, and inside each expression, 
+        we call this specific method on the accept visitor.
+    </p>
+    <p>In this approach, we use a Visitor class and each expression has an accept(visitor) wich calls an specific method of the visitor
+        created for thar particular class, so we avoid the if else instanceof reflection visitor
+    </p>
+
+    <br>
+    <p>For each expression, we have to implement the acceptVisitor and call the specific visitor method for that specific expression</p>
+    <p>And in the visitor we have to implement a specific method to visit each type of expression</p>
+    <p>Instead of expressionInstance.print</p>
+    <p>we: expPrinterInstance.visitSpecificExpression(specificExpressionInstance)</p>
+    <br>
+    <p><strong>This approach is the better one bc its more scalable</strong></p>
+    <p><strong>Complete code ↓↓↓</strong></p>
+    <div class="poblem-solution__container">
+        <pre>
+    class NumberExpression
+    {
+        constructor(value)
+        {
+            this.value = value;
+        }
+
+        accept(visitor)
+        {
+            visitor.visitNumber(this);
+        }
+    }
+
+    class AdditionExpression
+    {
+        constructor(left, right)
+        {
+            this.left = left;
+            this.right = right;
+        }
+
+        accept(visitor)
+        {
+            visitor.visitAddition(this);
+        }
+    }
+
+    class Visitor
+    {
+        constructor()
+        {
+            this.buffer = [];
+        }
+    }
+
+    class ExpressionPrinter extends Visitor
+    {
+        constructor()
+        {
+            super();
+        }
+
+        visitNumber(e)      // used in NumberExporession
+        {
+            this.buffer.push(e.value);
+        }
+
+        visitAddition(e)   // used in AdditionExpression
+        {
+            this.buffer.push('(');
+            e.left.accept(this);
+            this.buffer.push('+');
+            e.right.accept(this);
+            this.buffer.push(')');
+        }
+
+        toString()          //to return the joined buffer
+        {
+            return this.buffer.join('');
+        }
+    }
+
+    class ExpressionCalculator
+    {
+        // this visitor is stateful which can lead to problems
+        constructor()
+        {
+            this.result = 0;
+        }
+
+        visitNumber(e)
+        {
+            this.result = e.value;
+        }
+
+        visitAddition(e)
+        {
+            e.left.accept(this);
+            let temp = this.result;
+            e.right.accept(this);
+            this.result += temp;
+        }
+    }
+
+    let e = new AdditionExpression(
+    new NumberExpression(1),
+    new AdditionExpression(
+        new NumberExpression(2),
+        new NumberExpression(3)
+    )
+    );
+
+    var ep = new ExpressionPrinter();
+    ep.visitAddition(e);
+
+    var ec = new ExpressionCalculator();
+    ec.visitAddition(e);
+
+    console.log(
+    `${ep.toString()} = ${ec.result}`
+    );
+
         </pre>
     </div>
 </div>
